[package]
name = "hostport"
description = "Parse and validate host:port combinations."
keywords = ["host", "port", "parsing"]
repository = "https://github.com/vikpe/hostport"
authors = ["Viktor Persson <viktor.persson@arcsin.se>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
]

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"

serde = { optional = true, version = "1.0.219", features = ["derive"] }
serde_json = { optional = true, version = "1.0.140" }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
pretty_assertions = "1.4.1"
proptest = "1.6.0"

[features]
json = ["dep:serde", "dep:serde_json"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[[bench]]
name = "bench_lib"
harness = false
